inpage permissions completed

--- a/themes/default/common/sidenav.html
+++ b/themes/default/common/sidenav.html
@@ -332,7 +332,7 @@
 
                 <li class="main-menu w-100">
                     <a href="{{ app.url }}/backup/" class="w-100">
-                        <i class="la la-institution"></i>
+                        <i class="la la-cloud-download"></i>
                         <span class="display:block;">&nbsp; Backup</span>
                     </a>
                 </li>
