--- a/themes/default/report/attendance.html
+++ b/themes/default/report/attendance.html
@@ -54,7 +54,7 @@
 
                                 </div>
                                 <div class="card-footer bg-transparent border-0">
-                                    <button class="btn btn-primary" onclick="Generate_ClassAttendance();">Generate</button>
+                                    {% if permission.report.any.generate %}<button class="btn btn-primary" onclick="Generate_ClassAttendance();">Generate</button>{% endif %}
                                 </div>
                             </div>
 
@@ -77,7 +77,7 @@
 
                                 </div>
                                 <div class="card-footer bg-transparent border-0">
-                                    <button class="btn btn-primary" onclick="Generate_StaffAttendance();">Generate</button>
+                                    {% if permission.report.any.generate %}<button class="btn btn-primary" onclick="Generate_StaffAttendance();">Generate</button>{% endif %}
                                 </div>
                             </div>
 
@@ -101,8 +101,8 @@
                                                 <td class="text-center">{{ report.generated_on }}</td>
                                                 <td class="text-center" scope="col">{{ report.user.username }}</td>
                                                 <td class="text-right">
-                                                    <a href="{{ report.path }}" target="_blank"><button class="btn btn-sm btn-primary">View</button></a>
-                                                    <button onClick="onClick_DeleteReport('{{ report.id }}')" class="btn btn-sm btn-danger">Remove</button>
+                                                    {% if permission.report.any.view %}<a href="{{ report.path }}" target="_blank"><button class="btn btn-sm btn-primary">View</button></a>{% endif %}
+                                                    {% if permission.report.any.delete %}<button onClick="onClick_DeleteReport('{{ report.id }}')" class="btn btn-sm btn-danger">Remove</button>{% endif %}
                                                 </td>
                                             </tr>
                                             {% endfor %}
@@ -130,8 +130,8 @@
                                                 <td class="text-center">{{ report.generated_on }}</td>
                                                 <td class="text-center" scope="col">{{ report.user.username }}</td>
                                                 <td class="text-right">
-                                                    <a href="{{ report.path }}" target="_blank"><button class="btn btn-sm btn-primary">View</button></a>
-                                                    <button onClick="onClick_DeleteReport('{{ report.id }}')" class="btn btn-sm btn-danger">Remove</button>
+                                                    {% if permission.report.any.view %}<a href="{{ report.path }}" target="_blank"><button class="btn btn-sm btn-primary">View</button></a>{% endif %}
+                                                    {% if permission.report.any.delete %}<button onClick="onClick_DeleteReport('{{ report.id }}')" class="btn btn-sm btn-danger">Remove</button>{% endif %}
                                                 </td>
                                             </tr>
                                             {% endfor %}
