--- a/themes/default/sport/search_coach.html
+++ b/themes/default/sport/search_coach.html
@@ -122,7 +122,7 @@
                                             <td class="text-center">{{ coach.phone_mobile }}</td>
                                             <td class="text-center">{{ coach.city }}</td>
                                             <td class="text-center">{{ coach.sport }}</td>
-                                            <td class="text-right"><a href="{{ app.url }}/sport/profile_coach/{{ coach.id }}"><button type="button" class="btn btn-sm btn-success"><i class="la la-user"></i> View Profile</button></a></td>
+                                            {% if permission.coach.profile.view %}<td class="text-right"><a href="{{ app.url }}/sport/profile_coach/{{ coach.id }}"><button type="button" class="btn btn-sm btn-success"><i class="la la-user"></i> View Profile</button></a></td>{% endif %}
                                         </tr>
                                     {% endfor %}
                                 </tbody>
