--- a/themes/default/parents/search.html
+++ b/themes/default/parents/search.html
@@ -215,7 +215,7 @@
                                             <td class="text-center">{{ parent.mobile }}</td>
                                             <td class="text-center">{{ parent.city }}</td>                              
                                             <td class="text-right">
-                                                <a href="{{ app.url }}/parents/profile/{{ parent.id }}"><button type="button" class="btn btn-sm btn-success"><i class="la la-user"></i> View Profile</button></a>
+                                                {% if permission.parent.profile.view %}<a href="{{ app.url }}/parents/profile/{{ parent.id }}"><button type="button" class="btn btn-sm btn-success"><i class="la la-user"></i> View Profile</button></a>{% endif %}
                                             </td>
                                         </tr>
                                     {% endfor %}
