--- a/themes/default/report/staff.html
+++ b/themes/default/report/staff.html
@@ -46,7 +46,7 @@
                                 </div> -->
                                 <div class="card-footer bg-transparent">
                                     <input type="hidden" id="staff-present" value="true"/>
-                                    <button class="btn btn-primary" onclick="Generate_StaffPresent();">Generate</button>
+                                    {% if permission.report.any.generate %}<button class="btn btn-primary" onclick="Generate_StaffPresent();">Generate</button>{% endif %}
                                 </div>
                             </div>
 
@@ -69,7 +69,7 @@
                                 </div> -->
                                 <div class="card-footer bg-transparent">
                                     <input type="hidden" id="staff-absent" value="true"/>
-                                    <button class="btn btn-primary" onclick="Generate_StaffAbsent();">Generate</button>
+                                    {% if permission.report.any.generate %}<button class="btn btn-primary" onclick="Generate_StaffAbsent();">Generate</button>{% endif %}
                                 </div>
                             </div>
 
@@ -93,8 +93,8 @@
                                                 <td class="text-center">{{ report.generated_on }}</td>
                                                 <td class="text-center" scope="col">{{ report.user.username }}</td>
                                                 <td class="text-right">
-                                                    <a href="{{ report.path }}" target="_blank"><button class="btn btn-sm btn-primary">View</button></a>
-                                                    <button onClick="onClick_DeleteReport('{{ report.id }}')" class="btn btn-sm btn-danger">Remove</button>
+                                                    {% if permission.report.any.view %}<a href="{{ report.path }}" target="_blank"><button class="btn btn-sm btn-primary">View</button></a>{% endif %}
+                                                    {% if permission.report.any.delete %}<button onClick="onClick_DeleteReport('{{ report.id }}')" class="btn btn-sm btn-danger">Remove</button>{% endif %}
                                                 </td>
                                             </tr>
                                             {% endfor %}
@@ -122,8 +122,8 @@
                                                 <td class="text-center">{{ report.generated_on }}</td>
                                                 <td class="text-center" scope="col">{{ report.user.username }}</td>
                                                 <td class="text-right">
-                                                    <a href="{{ report.path }}" target="_blank"><button class="btn btn-sm btn-primary">View</button></a>
-                                                    <button onClick="onClick_DeleteReport('{{ report.id }}')" class="btn btn-sm btn-danger">Remove</button>
+                                                    {% if permission.report.any.view %}<a href="{{ report.path }}" target="_blank"><button class="btn btn-sm btn-primary">View</button></a>{% endif %}
+                                                    {% if permission.report.any.delete %}<button onClick="onClick_DeleteReport('{{ report.id }}')" class="btn btn-sm btn-danger">Remove</button>{% endif %}
                                                 </td>
                                             </tr>
                                             {% endfor %}
