--- a/themes/default/report/student.html
+++ b/themes/default/report/student.html
@@ -45,7 +45,7 @@
 
                                 </div>
                                 <div class="card-footer bg-transparent border-0">
-                                    <button class="btn btn-primary" onclick="Generate_ClassAllStudent();">Generate</button>
+                                    {% if permission.report.any.generate %}<button class="btn btn-primary" onclick="Generate_ClassAllStudent();">Generate</button>{% endif %}
                                 </div>
                             </div>
 
@@ -68,7 +68,7 @@
 
                                 </div>
                                 <div class="card-footer bg-transparent border-0">
-                                    <button class="btn btn-primary" onclick="Generate_ClassOneStudent();">Generate</button>
+                                    {% if permission.report.any.generate %}<button class="btn btn-primary" onclick="Generate_ClassOneStudent();">Generate</button>{% endif %}
                                 </div>
                             </div>
 
@@ -92,8 +92,8 @@
                                                 <td class="text-center">{{ report.generated_on }}</td>
                                                 <td class="text-center" scope="col">{{ report.user.username }}</td>
                                                 <td class="text-right">
-                                                    <a href="{{ report.path }}" target="_blank"><button class="btn btn-sm btn-primary">View</button></a>
-                                                    <button onClick="onClick_DeleteReport('{{ report.id }}')" class="btn btn-sm btn-danger">Remove</button>
+                                                    {% if permission.report.any.view %}<a href="{{ report.path }}" target="_blank"><button class="btn btn-sm btn-primary">View</button></a>{% endif %}
+                                                    {% if permission.report.any.delete %}<button onClick="onClick_DeleteReport('{{ report.id }}')" class="btn btn-sm btn-danger">Remove</button>{% endif %}
                                                 </td>
                                             </tr>
                                             {% endfor %}
@@ -121,8 +121,8 @@
                                                 <td class="text-center">{{ report.generated_on }}</td>
                                                 <td class="text-center" scope="col">{{ report.user.username }}</td>
                                                 <td class="text-right">
-                                                    <a href="{{ report.path }}" target="_blank"><button class="btn btn-sm btn-primary">View</button></a>
-                                                    <button onClick="onClick_DeleteReport('{{ report.id }}')" class="btn btn-sm btn-danger">Remove</button>
+                                                    {% if permission.report.any.view %}<a href="{{ report.path }}" target="_blank"><button class="btn btn-sm btn-primary">View</button></a>{% endif %}
+                                                    {% if permission.report.any.delete %}<button onClick="onClick_DeleteReport('{{ report.id }}')" class="btn btn-sm btn-danger">Remove</button>{% endif %}
                                                 </td>
                                             </tr>
                                             {% endfor %}
