--- a/themes/default/report/result.html
+++ b/themes/default/report/result.html
@@ -27,7 +27,8 @@
                     <div class="col-12 mt-5">
                         <div class="row">
 
-                            <div class="col-6 card">
+                            <!-- CLASS EXAM RESULT -->
+                            <div class="col card d-none">
                                 <div class="card-header"><h5>Exam Class Report</h5></div>
                                 <div class="card-body">
 
@@ -61,26 +62,41 @@
                                 </div>
                             </div>
 
-                            <div class="col-6 card">
+                            <!-- STUDENT EXAM RESULT -->
+                            <div class="col card">
                                 <div class="card-header"><h5>Student Exam Report</h5></div>
                                 <div class="card-body">
 
                                     <!-- FORM -->
                                     <div class="form-row">
+
+                                        <!-- SELECT STUDENT -->
                                         <div class="col">
                                             <label for="inpt-student">Student Name</label>
                                             <select class="form-control selectpicker show-tick" data-live-search="true" data-size="5" id="inpt-student" name="student">
                                                 <option value="" selected>- Select -</option>
                                                 {% for student in students %}
-                                                    <option value="{{ student.id }}"> {{ student.fullname }} </option>
+                                                    <option value="{{ student.id }}"> {{ student.full_name }} </option>
                                                 {% endfor %}
                                             </select>
                                         </div>
+
+                                        <!-- SELECT EXAM -->
+                                        <div class="col">
+                                            <label for="inpt-exam">Exam</label>
+                                            <select class="form-control selectpicker show-tick" id="inpt-exams" name="exams">
+                                                <option selected disabled> - Select Exam - </option>
+                                                {% for exam in exams %}
+                                                    <option value="{{ exam.id }}"> {{ exam.type.name }} - {{ exam.year }} </option>
+                                                {% endfor %}
+                                            </select>
+                                        </div>
+
                                     </div>
 
                                 </div>
                                 <div class="card-footer bg-transparent border-0">
-                                    {% if permission.report.any.generate %}<button class="btn btn-primary" onclick="Generate_ClassOneStudent();">Generate</button>{% endif %}
+                                    {% if permission.report.any.generate %}<button class="btn btn-primary" onclick="Generate_StudentExamResult();">Generate</button>{% endif %}
                                 </div>
                             </div>
 
@@ -88,7 +104,7 @@
 
                         <div class="row mt-3">
 
-                            <div class="col-md-6 card">
+                            <div class="col card d-none">
                                 <table class="table table-responsive-md">
                                     <thead>
                                         <tr>
@@ -117,7 +133,7 @@
                                     </tbody>
                                 </table>
                             </div>
-                            <div class="col-md-6 card">
+                            <div class="col card">
                                 <table class="table table-responsive-md">
                                     <thead>
                                         <tr>
@@ -163,7 +179,7 @@
 
 <script>
 
-    //GENERATE CLASS STUDENT PROFILE REPORT 
+    //GENERATE CLASS EXAM RESULT REPORT 
     Generate_ClassExamResult = () => {
 
         // PAYLOAD
@@ -198,16 +214,17 @@
         })
     }
 
-    //GENERATE STUDENT PROFILE REPORT 
-    Generate_ClassOneStudent = () => {
+    //GENERATE STUDENT EXAM RESULT REPORT 
+    Generate_StudentExamResult = () => {
 
         // PAYLOAD
         let formData = new FormData()
         formData.append("student_id", $("#inpt-student").val())
+        formData.append("exam_id", $("#inpt-exams").val())
 
         // AJAX
         $.ajax({
-            url: "{{ app.url }}/report/class_one_student_ajax",
+            url: "{{ app.url }}/report/student_exam_result_ajax",
             method: 'POST',
             data: formData,
             processData: false,
@@ -222,7 +239,7 @@
                         }
                     })
                 } else {
-                    alertify.alert("Failed", Response.error)
+                    alertify.alert("Failed", Response.message)
                 }
             },
             error: (e) => {
