parent occupation card hide

--- a/themes/default/parents/index.html
+++ b/themes/default/parents/index.html
@@ -68,8 +68,8 @@
                                         </div>
                                     </div>
             
-                                    <!-- ACHIEVEMENTS -->
-                                    <div class="card">
+                                    <!-- OCCUPATION -->
+                                    <!-- <div class="card">
                                         <div class="card-header">
                                             <span class="text-warning">Most listed Occupation</span>
                                         </div>
@@ -81,7 +81,7 @@
                                             </p>
                                             <a href="{{ app.url}}/parent/search" class="btn btn-xs btn-primary p-2">view details</a>
                                         </div>
-                                    </div>
+                                    </div> -->
                                 </div>
                             </div>
                         </div>
